# ChangeLog for games-board/gnubg
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/gnubg/ChangeLog,v 1.49 2009/12/30 07:56:56 mr_bones_ Exp $

  30 Dec 2009; Michael Sterrett <mr_bones_@gentoo.org>
  gnubg-20090817.ebuild:
  use ${T} instead of /tmp for constructing credits (bug #298275)

  26 Dec 2009; Raúl Porcel <armin76@gentoo.org> gnubg-0.14.3-r1.ebuild,
  gnubg-20090817.ebuild:
  Drop sparc keywords

  03 Dec 2009; Michael Sterrett <mr_bones_@gentoo.org>
  gnubg-20090817.ebuild:
  board3d also requires the gtk deps (bug #295583)

  22 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> gnubg-20090817.ebuild:
  Stable for ppc, bug 288644

  20 Nov 2009; Markus Meier <maekke@gentoo.org> gnubg-20090817.ebuild:
  x86 stable, bug #288644

  10 Nov 2009; Samuli Suominen <ssuominen@gentoo.org>
  gnubg-0.14.3-r1.ebuild:
  Remove USE arts (deprecated).

*gnubg-20090817 (20 Aug 2009)

  20 Aug 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +gnubg-20090817.ebuild, +files/gnubg-20090817-build.patch:
  version bump to snapshot releases (bug #156953) - ebuild submitted by
  Marijn Schouten

  07 Aug 2009; Michael Sterrett <mr_bones_@gentoo.org>
  gnubg-0.14.3-r1.ebuild, files/gnubg-0.14.3-as-needed.patch:
  EAPI=2; fix building with USE=python (bug #280005)

  13 Feb 2009; Alfredo Tupone <tupone@gentoo.org> gnubg-0.14.3-r1.ebuild:
  append-ldflags removed as not needed. Bug #226895 by flameeyes@gentoo.org

  04 Feb 2009; Alfredo Tupone <tupone@gentoo.org>
  files/gnubg-0.14.3-as-needed.patch:
  Fix --as-needed bug #247340 by flameeyes@gentoo.org

  04 Feb 2009; Alfredo Tupone <tupone@gentoo.org> gnubg-0.14.3-r1.ebuild:
  Does not work with dev-scheme/guile-1.8

  29 Feb 2008; Carsten Lohrke <carlo@gentoo.org> gnubg-0.14.3-r1.ebuild:
  Remove icon extension from desktop entry to match Icon Theme Specification.

  12 Nov 2007; Mike Frysinger <vapier@gentoo.org>