@@ -9,6 +9,6 @@ DIST gnubg.weights-0.14.gz 460747 RMD160 5d588b1145f0d0489b5d70fa6cfccd9ce6738f0
 DIST gnubg_os0.bd.gz 906720 RMD160 83fefa3c39544ca9a51f1ba7ae5e8bd5215e631c SHA1 d038a338ee2998d8a61d90b89478eeac3ad464c8 SHA256 e84a36f133ee7ea9fa3686af6c111088b8b43906db1b6c6b3db0035c84cda809
 DIST gnubg_ts0.bd.gz 5899380 RMD160 9e0bea798a53374061014226aca9f5d2063133e8 SHA1 b7c4c18dfc2f3be6cd884444bdf523c8aef6ce41 SHA256 0934e4f2d84f5cd50c2ff4592c93c49d43f7cb89da342600736849c7362626d5
 EBUILD gnubg-0.14.3-r1.ebuild 2937 RMD160 7599241d232ea52d18e1451022466e5741e66fc8 SHA1 2f18a4c499af880fb9ff3ae0643c4e23a3b9ab33 SHA256 f71e422dad9a7f3e5c71faa70906acca573f0af24fe1be6df530c7b12d3e0682
-EBUILD gnubg-20090817.ebuild 1808 RMD160 34e81ace453a8619d9318878d6240d8946cf4ab4 SHA1 18a699d2be09c1d6a6b39e9cdaaad070538d241e SHA256 a6d711b41f6f461a3a438ffa057005e8014b8a4afeec0d81b6fedb4313278ca7
-MISC ChangeLog 6568 RMD160 634d94c92f775852c86cd007ae9705e315384ddf SHA1 233292a8b406d8f89e9ece9590691528e450c9db SHA256 bc12ac499503d4a651f97ea9876f7737887361deb1d3617279016e22aca918f8
+EBUILD gnubg-20090817.ebuild 1804 RMD160 213c822e9ae30c887ddc9fa5aecc236c803ac48a SHA1 d9f56e45168b0c013d1eece47a7b1f5992adb021 SHA256 aad2a9fcddd0bdf44cb073a9a3644d386d4f73b838d1de20d9247beaa68569ed
+MISC ChangeLog 6682 RMD160 2a2bfb2f2067710dd3a58973470e1de2ba699266 SHA1 c0e6cc71fcd18dbf90fbfc4f566d8d0461ee49e6 SHA256 b6ccc81d0e6f9b9e7ceb127d9037b14c730c5cb2c88afab7ec998e544adccf53
 MISC metadata.xml 251 RMD160 f77a8fea97ab2a02ef2d9bf1cc7b390c5c19e6cb SHA1 8134d1f2611a2e4387a89e84580a2cb5c25f5649 SHA256 34f41062e84f1e12c08550faffc97632a2432df3579520cec76dbe8b08fb9cfe
