@@ -1,6 +1,9 @@
 # ChangeLog for games-board/gnubg
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/gnubg/ChangeLog,v 1.49 2009/12/30 07:56:56 mr_bones_ Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-board/gnubg/ChangeLog,v 1.50 2010/01/06 19:52:41 ranger Exp $
+
+  06 Jan 2010; Brent Baude <ranger@gentoo.org> gnubg-20090817.ebuild:
+  Marking gnubg-20090817 ppc64 for bug 288644
 
   30 Dec 2009; Michael Sterrett <mr_bones_@gentoo.org>
   gnubg-20090817.ebuild:
